@@ -625,6 +625,24 @@ AABXYnq0tLRtbW1fGku6AAAAD3RFWHRTb2Z0d2FyZQBHcmFmeDKgolNqAAAAUUlEQVQYlZWQwQ3A
 MAgDffsvXYmCoeSTOh84R5aFdC3WBCYxEe91w8uFBBQ2IH3ntfbujApyBQprRm+g7lFl9KHI1bO2
 gQbQBH2R+fUHOEKsB3lPAI4e7OcHAAAAAElFTkSuQmCC
 `)
+	TileImgs["map-a"] = []byte(`iVBORw0KGgoAAAANSUhEUgAAABAAAAAYCAMAAADEfo0+AAADAFBMVEUAAAD///8A/wD/+wCC/wAA
+/wAA/30A//8Agv8AAP95AP/PAP//ANf/AIL/AAD/fQDLmkWWPBhhAAD/94LD/4KC/4KC/76C//+C
+w/+Cgv+mgv/Pgv/7gv//gsP/goL/noKCAACCHACCPACCUQCCZQCCeQBBggAAggAAgjwAgoIAQYIA
+AIIoAIJNAIJ5AIKCAEEAAAAQEBAgICAwMDBFRUVVVVVlZWV1dXWGhoaampqqqqq6urrLy8vf39/v
+7+////9NAABZAABxAACGAACeAAC2AADPAADnAAD/AAD/HBz/NDT/UVH/bW3/ior/oqL/vr5NJABV
+KABtNACGPACeSQC2WQDPZQDncQD/fQD/jhz/mjT/plH/sm3/vob/z6L/375NSQBZUQBxaQCGggCe
+lgC2rgDPxwDn4wD//wD//xz/+zT/+1H/923/+4b/+6L/+74ATQAAYQAAeQAAjgAApgAAugAA0wAA
+6wAA/wAc/xw4/zRV/1Fx/22K/4am/6LD/74AQUEAWVkAcXEAhoYAnp4AtrYAz88A5+cA//9Z//t1
+//uK//+e//u6///L///b//8AIEEALFkAOHEARYYAUZ4AXbYAac8AdecAgv8cjv80nv9Rqv9tuv+K
+y/+i1/++4/8AAE0AAGUABHkABI4ABKYAAL4AANMAAOsAAP8cJP80PP9RXf9tef+Kkv+iqv++x/8k
+AE0wAGVBAIJNAJpZALJlAMtxAOd5AP+CAP+OHP+WNP+mUf+ubf++hv/Lov/bvv9JAE1fAGN1AHqL
+AJChAKe3AL3NANTjAOvmF+3qL/DtR/LxX/X0dvf4jvr7pvz/vv8gAAAsAAA4BARJDAhVFBBhIBhx
+KCR9OCyGRTiaWU2qbV26gnXLmorfsqLvz77/698gIAA8PABRTQBlWQh5ZQyObRSieRy2fSi+gjjH
+jk3PlmHbpnXjso7rw6b308P/69//HBz/HBz/HBz/HBz/HBz/HBz/HBysfHz/HBz/HBz/HBz/HBwA
+AABXYnq0tLRtbW1fGku6AAAAD3RFWHRTb2Z0d2FyZQBHcmFmeDKgolNqAAAAPElEQVQYlb2P0QoA
+IAwCd///01HUWCKjp3zz3AQjvooH0qX+GkkgPb4BQVA6pmGR/c1R9t8AhKCkB2bVACV2AGPFSnxk
+AAAAAElFTkSuQmCC
+`)
 	TileImgs["map-amulet"] = []byte(`iVBORw0KGgoAAAANSUhEUgAAABAAAAAYCAIAAAB8wupbAAAAA3NCSVQICAjb4U/gAAAAGnRFWHRT
 b2Z0d2FyZQBUayBUb29sa2l0IHY4LjYuOK3Fod8AAAA7SURBVHicY2AYBaOANPD//3+SVROrB1kd
 YT2YKqith1LV+MRx+ZWwDf9hgIBquB5kbQRUI+shJ6apAwBo6VaqUhEfVgAAAABJRU5ErkJggg==
@@ -1107,6 +1125,24 @@ wNURpQFNNQENmKpxakCWJko1pk58jvmPDRDlV2JVDxoAAAJJm2W1SJ6TAAAAAElFTkSuQmCC
 	TileImgs["map-rubble"] = []byte(`iVBORw0KGgoAAAANSUhEUgAAABAAAAAYCAIAAAB8wupbAAAAA3NCSVQICAjb4U/gAAAAGnRFWHRT
 b2Z0d2FyZQBUayBUb29sa2l0IHY4LjYuOK3Fod8AAAA7SURBVHicY2AYBaNgFFAB/AcDCANNHKdq
 ZD3IDHQ9cD4aA00zFuPxmI2iB808XC5E6MEqgSmI3fcEAQDlNJJuqMENpAAAAABJRU5ErkJggg==
+`)
+	TileImgs["map-s"] = []byte(`iVBORw0KGgoAAAANSUhEUgAAABAAAAAYCAMAAADEfo0+AAADAFBMVEUAAAD///8A/wD/+wCC/wAA
+/wAA/30A//8Agv8AAP95AP/PAP//ANf/AIL/AAD/fQDLmkWWPBhhAAD/94LD/4KC/4KC/76C//+C
+w/+Cgv+mgv/Pgv/7gv//gsP/goL/noKCAACCHACCPACCUQCCZQCCeQBBggAAggAAgjwAgoIAQYIA
+AIIoAIJNAIJ5AIKCAEEAAAAQEBAgICAwMDBFRUVVVVVlZWV1dXWGhoaampqqqqq6urrLy8vf39/v
+7+////9NAABZAABxAACGAACeAAC2AADPAADnAAD/AAD/HBz/NDT/UVH/bW3/ior/oqL/vr5NJABV
+KABtNACGPACeSQC2WQDPZQDncQD/fQD/jhz/mjT/plH/sm3/vob/z6L/375NSQBZUQBxaQCGggCe
+lgC2rgDPxwDn4wD//wD//xz/+zT/+1H/923/+4b/+6L/+74ATQAAYQAAeQAAjgAApgAAugAA0wAA
+6wAA/wAc/xw4/zRV/1Fx/22K/4am/6LD/74AQUEAWVkAcXEAhoYAnp4AtrYAz88A5+cA//9Z//t1
+//uK//+e//u6///L///b//8AIEEALFkAOHEARYYAUZ4AXbYAac8AdecAgv8cjv80nv9Rqv9tuv+K
+y/+i1/++4/8AAE0AAGUABHkABI4ABKYAAL4AANMAAOsAAP8cJP80PP9RXf9tef+Kkv+iqv++x/8k
+AE0wAGVBAIJNAJpZALJlAMtxAOd5AP+CAP+OHP+WNP+mUf+ubf++hv/Lov/bvv9JAE1fAGN1AHqL
+AJChAKe3AL3NANTjAOvmF+3qL/DtR/LxX/X0dvf4jvr7pvz/vv8gAAAsAAA4BARJDAhVFBBhIBhx
+KCR9OCyGRTiaWU2qbV26gnXLmorfsqLvz77/698gIAA8PABRTQBlWQh5ZQyObRSieRy2fSi+gjjH
+jk3PlmHbpnXjso7rw6b308P/69//HBz/HBz/HBz/HBz/HBz/HBz/HBysfHz/HBz/HBz/HBz/HBwA
+AABXYnq0tLRtbW1fGku6AAAAD3RFWHRTb2Z0d2FyZQBHcmFmeDKgolNqAAAAT0lEQVQYlY2QQQ4A
+IAjD6P8/bdDIQKKRi1DJNjX7KFrrB6QrfHYiwKwbIAOkIBUQmF5ayTmqbdKo5JxFzqQsZFu1Beu2
+a49o40Fv0L83agByFgCNKWZ45gAAAABJRU5ErkJggg==
 `)
 	TileImgs["map-scroll"] = []byte(`iVBORw0KGgoAAAANSUhEUgAAABAAAAAYCAIAAAB8wupbAAAAA3NCSVQICAjb4U/gAAAAGnRFWHRT
 b2Z0d2FyZQBUayBUb29sa2l0IHY4LjYuOK3Fod8AAABHSURBVHicY2AYBQz/cQOcqrGKw0kSzMai
